fixed overflows

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -63,6 +63,7 @@
 
     .about_toggle {
       .switch {
+        overflow-y: hidden;
         position: relative;
         display: block;
         width: 100%;
